--- a/contact.css
+++ b/contact.css
@@ -2,12 +2,12 @@ body{color: #262626;height: 1000px;}
 .carte{
     width: 350px !important;
     margin-left: 110px;
+    border: solid 3px #e04848 !important;
 }
 #contact h1 {
     margin-top: 50px;
     text-align: center;
 }
-
 #contact form {
     display: flex;
     flex-wrap: wrap;
@@ -16,12 +16,22 @@ body{color: #262626;height: 1000px;}
     margin-top: 10px;
     /* margin-left: 75px !important; */
 }
-.btn-dark{
-    padding: 20px !important;
-    letter-spacing: 1.2px !important;
-    font-size: 14px !important;
+#localiser{
+    text-align: center !important;
+    margin-bottom: 40px !important;
+    margin-top: 60px !important;
+    color: black;
 }
 
+.btn-dark{
+    padding: 10px !important;
+    letter-spacing: 1.2px !important;
+    font-size: 5px !important;
+}
+
+#contact{
+    color: black;
+}
 #contact form fieldset {
     padding: 10px;
 }
@@ -82,7 +92,10 @@ body{color: #262626;height: 1000px;}
 }
 
 #controles input {
-    padding: 10px;
+    padding: 15px !important;
+    padding-left: 25px !important;
+    padding-right: 25px !important;
+    font-size: 13px !important;
 }
 
 #controles input:first-child {
